--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,6 +1,6 @@
 .footer {
   background-color: black;
-  color: var(--colorSecundario);
+  color: white;
   padding: 40px 0;
   font-family: var(--fuentePrincipal);
 
@@ -21,7 +21,7 @@
     }
 
     a {
-      color: var(--colorSecundario);
+      color: white;
       text-decoration: none;
       transition: color 0.3s;
 
