--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,8 @@
   --fuenteSecundaria: "Heebo", sans-serif;
 
   --colorPrimario: #0F151B;
-  --colorSecundario: #e4e4e4;
+  --colorSecundario: #e9e9e94d;
+  --colorTerciario: #67c29e;
 
 
 }
