--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -9,7 +9,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 20px 0;
 
   &:first-child {
     margin: 0;
@@ -24,7 +23,7 @@
     display: block;
 
     @media (max-width: 1023px) {
-        width: 100%;
+      width: 100%;
     }
   }
 
@@ -49,7 +48,7 @@
     z-index: 2;
 
     @media (max-width: 767px) {
-        left: 35%;
+      left: 35%;
     }
 
     p {
@@ -97,6 +96,24 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin: 20px 50px;
+
+  &.reverse {
+    grid-template-columns: 1fr 1fr;
+
+    @media (max-width: 820px) {
+        grid-template-columns: 1fr;
+    }
+
+    .image-product-brand {
+      order: 2;
+      margin: 0 0 0 10px;
+    }
+
+    .products-container {
+      order: 1;
+      margin: 0;
+    }
+  }
 
   @media (max-width: 1023px) {
     grid-template-columns: 1fr;
@@ -149,8 +166,8 @@
       .product-price {
         margin-top: 5px;
         font-weight: bold;
-        font-family: var(--fuentePrincipal);
-        color: green;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        color: gray;
       }
     }
   }
