--- a/src/app/product/product.component.scss
+++ b/src/app/product/product.component.scss
@@ -5,6 +5,13 @@
   gap: 45px;
   padding: 50px;
   background-color: var(--colorSecundario);
+
+  @media (max-width: 820px) {
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    gap: 20px;
+  }
 }
 
 .product-images-sidebar {
@@ -12,22 +19,46 @@
   flex-direction: column;
   gap: 10px;
   flex-shrink: 0;
-}
 
-.product-images-sidebar .thumbnail {
-  cursor: pointer;
-}
+  @media (max-width: 820px) {
+    order: 1;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: center;
+    overflow-x: auto;
+    width: 100%;
+  }
 
-.product-images-sidebar .thumbnail img {
-  width: 100px;
-  height: 100px;
-  object-fit: cover;
-  opacity: 0.5;
-  transition: opacity 0.3s;
-}
+  @media (max-width: 680px) {
+    margin: 6px 0 0;
+  }
 
-.product-images-sidebar .thumbnail img.selected {
-  opacity: 1;
+  .thumbnail {
+    cursor: pointer;
+
+    img {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+      opacity: 0.5;
+      transition: opacity 0.3s;
+
+      &.selected {
+        opacity: 1;
+      }
+
+      @media (max-width: 820px) {
+        width: 110px;
+        height: 110px;
+      }
+
+      @media (max-width: 680px) {
+          width: 65px;
+          height: 65px;
+      }
+    }
+  }
 }
 
 .product-image-main {
@@ -35,159 +66,287 @@
   justify-content: center;
   align-items: center;
   flex-shrink: 0;
-}
 
-.product-image-main img {
-  max-width: 700px;
-  height: auto;
-  transition: transform 0.5s;
+  @media (max-width: 820px) {
+    order: 2;
+    margin-bottom: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  img {
+    max-width: 700px;
+    height: auto;
+    transition: transform 0.5s;
+
+    @media (max-width: 820px) {
+      max-width: 100%;
+      height: auto;
+    }
+  }
 }
 
 .product-info {
   max-width: 600px;
   flex-grow: 1;
-}
 
-.product-info h1 {
-  font-size: 24px;
-  margin-bottom: 10px;
-  font-family: var(--fuentePrincipal);
-  font-weight: 700;
-}
+  @media (max-width: 820px) {
+    order: 3;
+    max-width: 100%;
+    text-align: left;
+    padding: 0 50px;
+  }
 
-.price {
-  font-size: 20px;
-  color: #333;
-  margin-bottom: 20px;
-  font-family: var(--fuentePrincipal);
-  color: green;
-  font-weight: 500;
+  @media (max-width: 680px) {
+      padding: 0 20px;
+  }
+
+  h1 {
+    font-size: 24px;
+    font-family: var(--fuentePrincipal);
+    font-weight: 700;
+    margin: 0 0 10px 0;
+
+    @media (max-width: 820px) {
+      text-align: center;
+      font-size: 25px;
+    }
+
+    @media (max-width: 680px) {
+        font-size: 30px;
+    }
+  }
+
+  .price {
+    font-size: 20px;
+    color: #333;
+    font-family: var(--fuentePrincipal);
+    color: gray;
+    font-weight: 500;
+    margin: 0;
+
+    @media (max-width: 820px) {
+      text-align: center;
+      font-size: 20px;
+    }
+  }
 }
 
 .description {
   font-size: 16px;
   margin-bottom: 20px;
-}
 
-.color-options, .size-options {
-  margin-bottom: 20px;
-
-  h3 {
-    font-family: var(--fuentePrincipal);
+  @media (max-width: 820px) {
+    font-size: 12px;
   }
 }
 
-.colors, .sizes {
+.color-options {
+  margin: 30px 0;
+}
+
+.color-text {
+  display: flex;
+  align-items: center;
+  margin: 0 0 10px 0;
+
+  @media (max-width: 820px) {
+    justify-content: center;
+  }
+
+  h3 {
+    margin: 0 7px 0 0;
+    font-family: var(--fuentePrincipal);
+    font-size: 20px;
+  }
+
+  p {
+    margin: 0;
+    font-weight: 700;
+    font-family: var(--fuentePrincipal);
+    font-size: 20px;
+  }
+}
+
+.colors {
   display: flex;
   gap: 10px;
+
+  @media (max-width: 820px) {
+    justify-content: center;
+  }
+
+  span {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    text-align: center;
+    line-height: 40px;
+    position: relative;
+    transition: ease-in 0.3s;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    @media (max-width: 820px) {
+      width: 55px;
+      height: 55px;
+      line-height: 30px;
+    }
+
+    .check-icon {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 20px;
+      color: white;
+      opacity: 0.5;
+      text-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
+      display: none;
+
+      @media (max-width: 820px) {
+          top: 70%;
+          left: 50%;
+          font-size: 25px;
+      }
+    }
+
+    &.selected .check-icon {
+      display: block;
+    }
+  }
 }
 
-.colors span {
-  display: inline-block;
-  width: 40px;
-  height: 40px;
-  border: 1px solid #000;
-  cursor: pointer;
-  text-align: center;
-  line-height: 40px;
-  transition: background-color 0.3s, color 0.3s;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+
+  .color-selector {
+    padding: 20px;
+    opacity: 0.8;
+    border-radius: 3px;
+  }
+
+.sizes {
+  display: flex;
+  gap: 10px;
+  margin: 0 0 20px 0;
+
+  @media (max-width: 820px) {
+    justify-content: center;
+  }
+
+  span {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border: 1px solid #000;
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 14px;
+    text-align: center;
+    line-height: 40px;
+    transition: background-color 0.3s, color 0.3s;
+
+    @media (max-width: 820px) {
+      width: 55px;
+      height: 55px;
+      line-height: 30px;
+      font-size: 17px;
+    }
+
+    &:hover {
+      background-color: #000;
+      color: #fff;
+    }
+
+    &.selected {
+      background-color: #000;
+      color: #fff;
+    }
+  }
 }
 
-.colors span:hover {
-  background-color: #000;
-  color: #fff;
-}
+.size-options {
+  margin: 0 0 30px 0;
 
-.colors span.selected {
-  background-color: #000;
-  color: #fff;
-}
+  h3 {
+    font-family: var(--fuentePrincipal);
+    margin: 0 0 10px 0;
 
-.color-selector {
-  padding: 20px;
-  opacity: 0.8;
-  border-radius: 3px;
-}
-
-.sizes span {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  width: 40px;
-  height: 40px;
-  border: 1px solid #000;
-  border-radius: 50%; /* Hacer los selectores de tallas redondos */
-  cursor: pointer;
-  font-size: 14px;
-  text-align: center;
-  line-height: 40px;  // Ajusta para centrar verticalmente
-  transition: background-color 0.3s, color 0.3s;
-}
-
-.sizes span:hover {
-  background-color: #000;
-  color: #fff;
-}
-
-.sizes span.selected {
-  background-color: #000;
-  color: #fff;
-}
-
-.size-guide {
-  display: block;
-  margin-top: 10px;
-  text-decoration: underline;
-  cursor: pointer;
-  color: blue;
+    @media (max-width: 820px) {
+      display: flex;
+      justify-content: center;
+      font-size: 20px;
+    }
+  }
 }
 
 .action-buttons {
   display: flex;
-  flex-direction: column;
-  gap: 10px;
-  margin-bottom: 20px;
-  font-family: var(--fuentePrincipal);
-}
+  justify-content: space-between;
 
-.add-to-bag, .add-to-wishlist {
-  padding: 10px;
-  border: none;
-  cursor: pointer;
-  font-size: 20px;
-  box-sizing: border-box;
-  transition: background-color 0.3s, color 0.3s;
-  border-radius: 4px;
-  height: 55px;
-}
+  @media (max-width: 820px) {
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 20px;
+    font-family: var(--fuentePrincipal);
+  }
 
-.add-to-bag {
-  background-color: black;
-  color: white;
-  border: 1px solid black;
-}
+  .add-to-bag {
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+    width: 50%;
+    padding: 10px;
+    font-size: 20px;
+    font-family: var(--fuentePrincipal);
+    transition: ease 0.3s;
+    background-color: var(--colorPrimario);
+    color: white;
+    margin: 0 10px 0 0;
 
-.add-to-bag:hover {
-  background-color: white;
-  color: black;
+    &:hover {
+      background-color: #333;
+    }
+
+    @media (max-width: 820px) {
+      font-size: 23px;
+      padding: 20px;
+      width: 100%;
+      margin: 0;
+    }
+  }
 }
 
 .add-to-wishlist {
+  cursor: pointer;
+  border-radius: 4px;
+  width: 50%;
+  padding: 10px;
+  font-size: 20px;
+  font-family: var(--fuentePrincipal);
+  transition: ease 0.3s;
   background-color: white;
-  color: black;
-  border: 1px solid black;
-}
+  border: 1px solid var(--colorPrimario);
 
-.add-to-wishlist:hover {
-  background-color: black;
-  color: white;
+  &:hover {
+    background-color: var(--colorSecundario);
+    color: var(--colorPrimario);
+  }
+
+  @media (max-width: 820px) {
+    font-size: 23px;
+    padding: 20px;
+    width: 100%;
+  }
 }
 
 .additional-info {
-  margin-top: 20px;
+  margin: 20px 0 0;
 }
 
 .info-tab {
@@ -197,23 +356,37 @@
   cursor: pointer;
   transition: color 0.3s;
   border-bottom: none;
-  padding: 0 10px;
-  text-transform: uppercase;
-}
 
-.info-tab h3 {
-  font-size: 18px;
-  transition: color 0.3s;
-  margin-right: auto;
-  font-family: var(--fuentePrincipal);
-}
+  @media (max-width: 820px) {
+      margin: 50px 0 0;
+  }
 
-.info-tab:hover h3, .info-tab:hover i {
-  color: red;
-}
+  &:hover {
+    h3, p {
+      color: red;
+    }
+  }
 
-.info-tab i {
-  margin-left: auto; /* Asegura que el icono esté alineado a la derecha */
+  h3 {
+    font-size: 18px;
+    transition: color 0.3s;
+    margin-right: auto;
+    font-family: var(--fuentePrincipal);
+
+    @media (max-width: 820px) {
+      font-size: 23px;
+    }
+  }
+
+  p {
+    font-size: 25px;
+    transition: color 0.3s;
+    font-family: var(--fuentePrincipal);
+
+    @media (max-width: 820px) {
+      font-size: 23px;
+    }
+  }
 }
 
 .info-content-container {
@@ -221,15 +394,25 @@
   max-height: 0;
   transition: max-height 0.3s ease-out, opacity 0.3s ease-out;
   opacity: 0;
-}
 
-.info-content-container.open {
-  max-height: 1000px; /* Ajusta esto según el contenido */
-  opacity: 1;
+  &.open {
+    max-height: 1000px;
+    opacity: 1;
+  }
 }
 
 .info-content {
-  padding: 10px 0; /* Ajusta el padding según sea necesario */
+  padding: 10px 0;
+
+  p {
+    font-family: var(--fuentePrincipal);
+  }
+
+  @media (max-width: 820px) {
+      p {
+        font-size: 20px;
+      }
+  }
 }
 
 .line {
@@ -238,178 +421,3 @@
   transition: transform 0.3s ease-out;
   transform-origin: top;
 }
-
-// .info-content-container.open + .line {
-//   transform: translateY(20px); /* Ajusta esto según la altura del contenido */
-// }
-
-.info-content-container + .line {
-  margin-top: 10px; /* Añade un margen superior para separar la línea del contenido */
-}
-
-
-
-/* Media Queries para dispositivos móviles y tabletas */
-@media (max-width: 1024px) {
-  .product-container {
-    display: flex;
-    justify-content: center;
-    padding: 48px;
-    gap: 70px;
-  }
-
-  .product-images-sidebar {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    flex-shrink: 0;
-  }
-
-  .product-images-sidebar .thumbnail img {
-    width: 80px;
-    height: 80px;
-  }
-
-  .product-image-main {
-    order: 2;
-    margin-bottom: 20px;
-  }
-
-  .product-image-main img {
-    max-width: 500px;
-  }
-
-  .product-info {
-    order: 3;
-    max-width: 100%;
-    text-align: left;
-  }
-
-  .product-info h1 {
-    font-size: 18px;
-  }
-
-  .price {
-    font-size: 16px;
-  }
-
-  .description {
-    font-size: 12px;
-  }
-
-  .color-options, .size-options {
-    margin-bottom: 15px;
-  }
-
-  .colors span, .sizes span {
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
-  }
-
-  .action-buttons {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-
-  .add-to-bag, .add-to-wishlist {
-    flex: 1;
-    font-size: 15 px;
-    padding: 6px;
-  }
-
-  .info-tab h3 {
-    font-size: 14px;
-  }
-}
-
-@media (max-width: 768px) {
-  .product-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px;
-    gap: 20px;
-  }
-
-  .product-images-sidebar {
-    order: 1;
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    justify-content: center;
-    overflow-x: auto;
-    width: 100%;
-
-    @media (max-width: 680px) {
-        margin: 6px 0 0;
-    }
-  }
-
-  .product-images-sidebar .thumbnail img {
-    width: 60px;
-    height: 60px;
-  }
-
-  .product-image-main {
-    order: 2;
-    margin-bottom: 20px;
-    width: 100%; /* Asegura que la imagen principal ocupe todo el ancho */
-    display: flex;
-    justify-content: center;
-  }
-
-  .product-image-main img {
-    max-width: 100%;
-    height: auto;
-  }
-
-  .product-info {
-    order: 3;
-    max-width: 100%;
-    text-align: center;
-  }
-
-  .product-info h1 {
-    font-size: 18px;
-  }
-
-  .price {
-    font-size: 16px;
-  }
-
-  .description {
-    font-size: 12px;
-  }
-
-  .color-options, .size-options {
-    margin-bottom: 15px;
-  }
-
-  .colors span, .sizes span {
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
-  }
-
-  .colors, .sizes {
-    justify-content: center;
-  }
-
-  .action-buttons {
-    flex-direction: row;
-    justify-content: center;
-  }
-
-  .add-to-bag, .add-to-wishlist {
-    font-size: 12px;
-    padding: 6px;
-
-  }
-
-  .info-tab h3 {
-    font-size: 14px;
-  }
-}
-
